--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -3,24 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
 <body>
     <header class="main-header">
-        <h1>Restaurant Chutya</h1>
+        <section>
+            <img src="images/logo-transparent.png" alt="Restaurant Chutyas Logo" width="200">
+            <h2>Restaurant Chutyas</h2>
+            <p>Moderne indische Küche mit dem gewissen Etwas</p>
+        </section>
         <nav aria-label="Hauptnavigation">
             <ul class ="main-nav">
                 <li class="nav-item"><a href="index.html" aria-current="page">Startseite</a></li>
                 <li class="nav-item"><a href="ueber-uns.html">Über Uns</a></li>
                 <li class="nav-item"><a href="speisekarte.html">Speisekarte</a></li>
                 <li class="nav-item"><a href="events.html">Events</a></li>
-                <li class="nav-item"><a href="reservierung.html">Reservierungen</a></li>
+                <li class="nav-item"><a href="reservierung.html">Reservierung</a></li>
                 <li class="nav-item"><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
+    <main>
+        <h1>Willkommen im Restaurant Chutyas</h1>
+        <h3>Wir freuen uns darauf, Sie zu bewirten!</h3>
+        <table>
+            <caption><h3>Öffnungszeiten</h3></caption>
+            <tr>
+                <th>Montag - Freitag</th>
+                <td>12:00 - 22:00 Uhr</td>
+            </tr>
+            <tr>
+                <th>Samstag</th>
+                <td>12:00 - 00:00 Uhr</td>
+            </tr>
+            <tr>
+                <th>Sonn- & Feiertage</th>
+                <td>14:00 - 00:00 Uhr</td>
+            </tr>
+        </table>
+    </main>
     <footer>
-
+        <p>&copy; Chutyas Design | <a href="kontakt.html">Kontakt</a></p>
     </footer>
 </body>
 </html>
