--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="main-header">
         <section>
-            <img src="images/logo-transparent.png" alt="Restaurant Chutyas Logo" width="200">
+            <img id="logo" src="images/logo-transparent.png" alt="Restaurant Chutyas Logo" width="200">
             <h2>Restaurant Chutyas</h2>
             <p>Moderne indische Küche mit dem gewissen Etwas</p>
         </section>
@@ -29,18 +29,26 @@
         <h3>Wir freuen uns darauf, Sie zu bewirten!</h3>
         <table>
             <caption><h3>Öffnungszeiten</h3></caption>
-            <tr>
-                <th>Montag - Freitag</th>
-                <td>12:00 - 22:00 Uhr</td>
-            </tr>
-            <tr>
-                <th>Samstag</th>
-                <td>12:00 - 00:00 Uhr</td>
-            </tr>
-            <tr>
-                <th>Sonn- & Feiertage</th>
-                <td>14:00 - 00:00 Uhr</td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Tag</th>
+                    <th>Uhrzeit</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>Montag - Freitag</th>
+                    <td>12:00 - 22:00 Uhr</td>
+                </tr>
+                <tr>
+                    <th>Samstag</th>
+                    <td>12:00 - 00:00 Uhr</td>
+                </tr>
+                <tr>
+                    <th>Sonn- & Feiertage</th>
+                    <td>14:00 - 00:00 Uhr</td>
+                </tr>
+            </tbody>
         </table>
     </main>
     <footer>
