--- a/restaurant/ueber-uns.html
+++ b/restaurant/ueber-uns.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="main-header">
-        <img src="images/logo-transparent.png" alt="Restaurant Chutyas Logo" width="200">
+        <img id="logo" src="images/logo-transparent.png" alt="Restaurant Chutyas Logo" width="200">
         <h2>Restaurant Chutyas</h2>
         <p>Moderne indische Küche mit dem gewissen Etwas</p>
         <nav aria-label="Hauptnavigation">
