added cards to restaurant/index.html

--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -28,7 +28,7 @@
         <h1>Willkommen im Restaurant Chutyas</h1>
         <h3>Wir freuen uns darauf, Sie zu bewirten!</h3>
         <table>
-            <caption><h3>Öffnungszeiten</h3></caption>
+            <caption><h2>Öffnungszeiten</h2></caption>
             <thead>
                 <tr>
                     <th>Tag</th>
@@ -50,6 +50,29 @@
                 </tr>
             </tbody>
         </table>
+        <section class="features-section">
+            <h2>Wir bieten an:</h2>
+            <div class="card-container">
+                <div class="card">
+                    <h3><img src="images/anruf.png" alt="Telefon" width="32"></h3> 
+                    <h3>Reservierung</h3>
+                    <p>Sie haben etwas besonderes geplant? Dann buchen Sie schon jetzt.</p>
+                    <p>Auf Anfrage auch Privatveranstaltungen.</p>
+                </div>
+                <div class="card">
+                    <h3><img src="images/kalender.png" alt="Kalender" width="32"></h3> 
+                    <h3>Events</h3>
+                    <p>Bei uns finden regelmäßig besondere Events statt.</p>
+                    <p>Erleben sie den Charme von Indien hautnah.</p>
+                </div>
+                <div class="card featured">
+                    <h3><img src="images/heim.png" alt="Haus" width="32"></h3> 
+                    <h3>Lieferung</h3>
+                    <p>Wir liefern unsere Gerichte auch gerne zu Ihnen nach Hause.</p>
+                    <p>Garantiert frisch und warm!</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <p>&copy; Chutyas Design | <a href="kontakt.html">Kontakt</a></p>
