--- a/restaurant/kontakt.html
+++ b/restaurant/kontakt.html
@@ -25,7 +25,7 @@
     <main>
         <h1>Kontakt</h1>
         <address>
-            <b>Chutyas GmbH</b><br>
+            <b><a href="../index.html">Chutyas GmbH</a></b><br>
             Behenchod Str. 69<br>
             42420 Meindorf<br>
             tel: <a href="tel:0123 456 789">0123 456 789</a><br>
